# libplayerurg2

./: .gitignore  AUTHORS  CMakeLists.txt
debian/: README.Debian  README.source  changelog  control  copyright  libplayerurg2.dirs  libplayerurg2.install  rules
src/: CMakeLists.txt  playerurg.cpp  urglaser.cfg
